# 0.5.3

- fixed problems with latest version of docker
- updated package-lock.json
- adding --use-version flag to use specific versions of images

# 0.5.2

- pagamenti e scadenze
 
- proxy importer

- documentation

- support docker-toolbox

# 0.5.1

- included 3 plugins (javascript, php, pythond)

- fixed a number of issues

# 0.5

First public release including:

- installer
- ide
- admin

# 0.5-pre

- prepared a demo with all the features

# v0.4-pre

- sample send message (not yet operative)
- automated deployment of backoffice
- backoffice
- status cmd

# v0.3-pre

- init command
- sample importer

# v0.2-pre

- the backend
- the ide